--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<section id="middle">
 			<section class="wrapper">
 				<div class="main">
-					<h2>LET'S Analyse Your Website SEO</h2>
+					<h2>Let's Analyse Your Website SEO</h2>
 					<p>Now You Can Customize Your SEO service to Your Need</p>
 						
 							<form action="" method="">
